--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   
 flutter_icons:
-  image_path: 'assets/img_finca.png'
+  image_path: 'assets/logo_finca.png'
   ios: true
   android: true
 
