--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   google_nav_bar: ^5.0.6
   line_icons: ^2.0.1
   calendar_appbar: ^0.0.6
+  google_fonts: ^3.0.1
+  font_awesome_flutter: ^10.1.0
 
 dev_dependencies:
   flutter_test:
