--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,11 @@ dependencies:
   calendar_appbar: ^0.0.6
   google_fonts: ^3.0.1
   font_awesome_flutter: ^10.1.0
-
+  firebase_core: ^1.19.2
+  firebase_auth: ^3.4.2
+  cloud_firestore: ^3.3.0
+  animated_text_kit: ^4.2.2
+  modal_progress_hud_nsn: ^0.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
