--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,12 @@ dependencies:
   cloud_firestore: ^3.3.0
   animated_text_kit: ^4.2.2
   modal_progress_hud_nsn: ^0.2.1
+  hive_flutter: ^1.1.0
+  shared_preferences: ^2.0.15
+  fl_chart: ^0.55.0
+  http: ^0.13.4
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
