--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   shared_preferences: ^2.0.15
   fl_chart: ^0.55.0
   http: ^0.13.4
+  dependencies:
+  auto_route: ^4.2.1
 
 
 dev_dependencies:
