--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,12 @@ dependencies:
   firebase_auth: ^3.4.2
   cloud_firestore: ^3.3.0
   animated_text_kit: ^4.2.2
-  modal_progress_hud_nsn: ^0.2.1
+
   hive_flutter: ^1.1.0
   shared_preferences: ^2.0.15
   fl_chart: ^0.55.0
   http: ^0.13.4
-  dependencies:
-  auto_route: ^4.2.1
+  firebase_core_platform_interface: 4.5.1
 
 
 dev_dependencies:
