Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch master
Your branch is up to date with 'origin/master'.

Changes to be committed:
	modified:   .gitignore
	modified:   android/app/build.gradle
	modified:   android/build.gradle
	modified:   lib/core/colors_picker.dart
	modified:   lib/core/constants.dart
	deleted:    lib/core/db_helper.dart
	new file:   lib/domain/db/transaction/transaction_db.dart
	new file:   lib/domain/models/category/category_model.dart
	new file:   lib/domain/models/category/category_model.g.dart
	new file:   lib/domain/models/transaction/transaction_model.dart
	new file:   lib/domain/models/transaction/transaction_model.g.dart
	modified:   lib/main.dart
	deleted:    lib/model/transaction.dart
	deleted:    lib/old_screens/add_transaction.dart
	deleted:    lib/old_screens/home_screen.dart
	deleted:    lib/old_screens/transaction_screen.dart
	modified:   lib/presentation/router/app_router.dart
	modified:   lib/presentation/screens/add_transaction/screen_add_transaction.dart
	new file:   lib/presentation/screens/add_transaction/widgets/custom_radio_button.dart
	modified:   lib/presentation/screens/analytics/screen_analytics.dart
	modified:   lib/presentation/screens/analytics/widgets/bar_graph/individual_bar.dart
	modified:   lib/presentation/screens/analytics/widgets/line_graph/line_graph_expense.dart
	modified:   lib/presentation/screens/analytics/widgets/line_graph/line_graph_income.dart
	deleted:    lib/presentation/screens/cards/screen_cards.dart
	modified:   lib/presentation/screens/home/screen_home.dart
	modified:   lib/presentation/screens/home/widgets/recent_transaction.dart
	modified:   lib/presentation/screens/home/widgets/savingplans_scroll_widget.dart
	modified:   lib/presentation/screens/home/widgets/subtitle_with_arrow_button.dart
	modified:   lib/presentation/screens/login/screen_login.dart
	modified:   lib/presentation/screens/main_page/scree

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,28 +12,30 @@ dependencies:
   animated_splash_screen: ^1.2.0
   animated_text_kit: ^4.2.2
   calendar_appbar: ^0.0.6
-  cloud_firestore: ^3.3.0
+  cloud_firestore: ^4.7.1
   cupertino_icons: ^1.0.2
-  firebase_auth: ^3.4.2
-  firebase_core: ^1.19.2
-  firebase_core_platform_interface: 4.5.1
+  firebase_auth: ^4.6.1
+  firebase_core: ^2.13.0
+  firebase_core_platform_interface: ^4.8.0
   fl_chart: ^0.62.0
   flutter:
     sdk: flutter
   flutter_emoji: ^2.4.0
   font_awesome_flutter: ^10.1.0
-  google_fonts: ^3.0.1
+  google_fonts: ^4.0.4
   google_nav_bar: ^5.0.6
+  hive_flutter: ^1.1.0
   http: ^0.13.4
-  icons_launcher: ^1.2.1
+  icons_launcher: ^2.1.0
   line_icons: ^2.0.1
   shared_preferences: ^2.0.15
-  splashscreen: null
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
+  build_runner: ^2.4.4
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.0
 
 flutter_icons:
   image_path: 'assets/logo_finca.png'
