--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,6 @@ environment:
 dependencies:
   animated_splash_screen: ^1.2.0
   animated_text_kit: ^4.2.2
-  calendar_appbar: ^0.0.6
   cloud_firestore: ^4.7.1
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.6.1
@@ -21,12 +20,14 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_emoji: ^2.4.0
+  flutter_slidable: ^3.0.0
   font_awesome_flutter: ^10.1.0
   google_fonts: ^4.0.4
   google_nav_bar: ^5.0.6
   hive_flutter: ^1.1.0
   http: ^0.13.4
   icons_launcher: ^2.1.0
+  intl: ^0.18.1
   line_icons: ^2.0.1
   shared_preferences: ^2.0.15
 
