--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,15 +13,18 @@ dependencies:
   animated_text_kit: ^4.2.2
   cloud_firestore: ^4.7.1
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.1
   firebase_auth: ^4.6.1
   firebase_core: ^2.13.0
   firebase_core_platform_interface: ^4.8.0
   fl_chart: ^0.62.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
   flutter_emoji: ^2.4.0
   flutter_slidable: ^3.0.0
   font_awesome_flutter: ^10.1.0
+  freezed_annotation: ^2.2.0
   google_fonts: ^4.0.4
   google_nav_bar: ^5.0.6
   hive_flutter: ^1.1.0
@@ -30,12 +33,14 @@ dependencies:
   intl: ^0.18.1
   line_icons: ^2.0.1
   shared_preferences: ^2.0.15
+  syncfusion_flutter_charts: ^22.1.36
 
 dev_dependencies:
   build_runner: ^2.4.4
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
+  freezed: ^2.3.4
   hive_generator: ^2.0.0
 
 flutter_icons:
