--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_emoji: ^2.4.0
+ 
   flutter_slidable: ^3.0.0
   font_awesome_flutter: ^10.1.0
   freezed_annotation: ^2.2.0
@@ -42,17 +43,21 @@ dev_dependencies:
     sdk: flutter
   freezed: ^2.3.4
   hive_generator: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
 
-flutter_icons:
-  image_path: 'assets/logo_finca.png'
+flutter_launcher_icons:
+  image_path: 'images/logo.png'
   ios: true
   android: true
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: 'images/foreground.png'
 
 flutter:
 
   uses-material-design: true
   assets:
-    - assets/
+    - images/logo.png
+    - images/foreground.png
 
   fonts:
     - family: MusticaPro
