--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,40 +9,55 @@ environment:
   sdk: ">=2.17.1 <3.0.0"
 
 dependencies:
-  animated_splash_screen: ^1.2.0
+  animated_splash_screen: ^1.3.0
   animated_text_kit: ^4.2.2
-  cloud_firestore: ^4.8.3
-  cupertino_icons: ^1.0.2
+  auto_route: ^7.8.3
+  cloud_firestore: ^4.9.0
+  cupertino_icons: ^1.0.5
   dartz: ^0.10.1
-  firebase_auth: ^4.6.1
-  firebase_core: ^2.13.0
+  dio: ^5.3.2
+  firebase_auth: ^4.8.0
+  firebase_core: ^2.15.1
   firebase_core_platform_interface: ^4.8.0
-  fl_chart: ^0.62.0
+  fl_chart: ^0.63.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
-  flutter_emoji: ^2.4.0
+  flutter_emoji: ^2.5.1
+  flutter_hooks: ^0.20.1
   flutter_slidable: ^3.0.0
-  font_awesome_flutter: ^10.1.0
-  freezed_annotation: ^2.2.0
-  google_fonts: ^4.0.4
+  font_awesome_flutter: ^10.5.0
+  freezed_annotation: ^2.4.1
+  get_it: ^7.6.0
+  google_fonts: ^5.1.0
   google_nav_bar: ^5.0.6
+  google_sign_in: ^6.1.4
   hive_flutter: ^1.1.0
-  http: ^0.13.4
-  icons_launcher: ^2.1.0
+  http: ^1.1.0
+  icons_launcher: ^2.1.3
+  injectable: ^2.3.0
   intl: ^0.18.1
-  line_icons: ^2.0.1
-  shared_preferences: ^2.0.15
-  syncfusion_flutter_charts: ^22.1.36
+  json_annotation: ^4.8.1
+  json_serializable: ^6.7.1
+  kt_dart: ^1.1.0
+  line_icons: ^2.0.3
+  provider: ^6.0.5
+  rxdart: ^0.27.7
+  shared_preferences: ^2.2.0
+  syncfusion_flutter_charts: ^22.2.11
+  uuid: ^3.0.7
 
 dev_dependencies:
-  build_runner: ^2.4.4
+  auto_route_generator: ^7.3.1
+  build_runner: ^2.4.6
   flutter_launcher_icons: ^0.13.1
-  flutter_lints: ^2.0.1
+  flutter_lints: ^2.0.2
   flutter_test:
     sdk: flutter
-  freezed: ^2.3.4
-  hive_generator: ^2.0.0
+  freezed: ^2.4.2
+  hive_generator: ^2.0.1
+  injectable_generator: ^2.4.0
+  lint: ^2.1.2
 
 flutter_launcher_icons:
   image_path: 'images/logo.png'
