--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   cupertino_icons: ^1.0.5
   dartz: ^0.10.1
   dio: ^5.3.2
+  equatable: ^2.0.5
   firebase_auth: ^4.8.0
   firebase_core: ^2.15.1
   firebase_core_platform_interface: ^4.8.0
@@ -29,7 +30,6 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   freezed_annotation: ^2.4.1
   get_it: ^7.6.0
-
   google_fonts: ^5.1.0
   google_nav_bar: ^5.0.6
   google_sign_in: ^6.1.4
