--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,12 @@ environment:
   sdk: ">=2.17.1 <3.0.0"
 
 dependencies:
+
   animated_splash_screen: ^1.3.0
   animated_text_kit: ^4.2.2
   animations: ^2.0.8
   auto_route: ^7.8.3
+
   chart_sparkline: ^1.0.13
   cloud_firestore: ^4.9.0
   cupertino_icons: ^1.0.5
@@ -48,6 +50,7 @@ dependencies:
   rxdart: ^0.27.7
   shared_preferences: ^2.2.0
   syncfusion_flutter_charts: ^22.2.11
+  top_snackbar_flutter: ^3.1.0
   uuid: ^3.0.7
 
 dev_dependencies:
