--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,18 +9,19 @@ environment:
   sdk: ">=2.17.1 <3.0.0"
 
 dependencies:
-
   animated_splash_screen: ^1.3.0
   animated_text_kit: ^4.2.2
+  animation_wrappers: ^3.0.0
   animations: ^2.0.8
   auto_route: ^7.8.3
-
   chart_sparkline: ^1.0.13
   cloud_firestore: ^4.9.0
   cupertino_icons: ^1.0.5
   dartz: ^0.10.1
   dio: ^5.3.2
+  double_back_to_close: ^2.0.0
   equatable: ^2.0.5
+  fade_shimmer: ^2.2.0
   firebase_auth: ^4.8.0
   firebase_core: ^2.15.1
   firebase_core_platform_interface: ^4.8.0
@@ -32,6 +33,7 @@ dependencies:
   flutter_emoji: ^2.5.1
   flutter_hooks: ^0.20.1
   flutter_slidable: ^3.0.0
+  fluttertoast: ^8.2.2
   font_awesome_flutter: ^10.5.0
   freezed_annotation: ^2.4.1
   get_it: ^7.6.0
@@ -49,10 +51,10 @@ dependencies:
   provider: ^6.0.5
   rxdart: ^0.27.7
   shared_preferences: ^2.2.0
+  shimmer: ^3.0.0
   syncfusion_flutter_charts: ^22.2.11
   top_snackbar_flutter: ^3.1.0
   uuid: ^3.0.7
-
 dev_dependencies:
   auto_route_generator: ^7.3.1
   build_runner: ^2.4.6
