--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_emoji: ^2.5.1
   flutter_hooks: ^0.20.1
   flutter_slidable: ^3.0.0
+  flutter_social_button: ^1.1.4+1
   fluttertoast: ^8.2.2
   font_awesome_flutter: ^10.5.0
   freezed_annotation: ^2.4.1
