--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_colorpicker: ^1.0.3
   flutter_emoji: ^2.5.1
   flutter_hooks: ^0.20.1
+  flutter_iconpicker: ^3.2.4
   flutter_slidable: ^3.0.0
   flutter_social_button: ^1.1.4+1
   fluttertoast: ^8.2.2
